--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url "https://nomadly.jfrog.io/nomadly/release-public"
+        }
     }
 }
 
